extended apis for data insertions
